[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/PressStart2P.tres" type="DynamicFont" id=1]
[ext_resource path="res://menus/start_menu.gd" type="Script" id=3]
[ext_resource path="res://menus/start_menu_pointer.png" type="Texture" id=4]
[ext_resource path="res://menus/start_menu_main.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=4]
resource_name = "Animate"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pointer/Pointer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -0.5, 0.5 ]
}

[node name="StartMenu" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="Pointer" type="Position2D" parent="."]
position = Vector2( 288, 160 )
rotation = -0.349066

[node name="Pointer" type="Sprite" parent="Pointer"]
position = Vector2( -40, -32 )
rotation = 0.00872665
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 72.0
margin_right = 132.0
margin_bottom = 152.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 15.0
focus_neighbour_top = NodePath("../Quit")
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
custom_colors/font_color_hover = Color( 0.0313726, 0.0941176, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.0313726, 0.0941176, 0.12549, 1 )
text = "-start-"
flat = true
align = 0

[node name="HowTo" type="Button" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 34.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
custom_colors/font_color_hover = Color( 0.0313726, 0.0941176, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.0313726, 0.0941176, 0.12549, 1 )
text = "how to play"
flat = true
align = 0

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 100.0
margin_bottom = 53.0
focus_neighbour_bottom = NodePath("../Start")
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
custom_colors/font_color_hover = Color( 0.0313726, 0.0941176, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.0313726, 0.0941176, 0.12549, 1 )
text = "quit"
flat = true
align = 0

[node name="Gap" type="Control" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 100.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit" type="Label" parent="."]
margin_left = 40.0
margin_top = 144.0
margin_right = 140.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
text = "by assface"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Animate"
playback_speed = 0.25
anims/Animate = SubResource( 4 )
[connection signal="focus_entered" from="VBoxContainer/Start" to="." method="_on_Start_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/Start" to="." method="_on_Start_focus_exited"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HowTo" to="." method="_on_HowTo_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HowTo" to="." method="_on_HowTo_focus_exited"]
[connection signal="pressed" from="VBoxContainer/HowTo" to="." method="_on_HowTo_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Quit" to="." method="_on_Quit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/Quit" to="." method="_on_Quit_focus_exited"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
